<resources>
    <string name="app_name">Quiz App</string>

    // Questions:
    <string name="question_1">Where was the first case of COVID-19 detected ?</string>
    <string name="question_2">Which year was the first case of COVID-19 detected in ?</string>
    <string name="question_3">Which of the following considered as COVID-19 symptoms ?</string>
    <string name="question_4">Recently, which is the country with the highest number of COVID-19 infections ?</string>
    <string name="question_5">Which of the community groups is most affected by COVID-19 ?</string>

    // First Question answers:
    <string name="radio_q1_ans">China</string>
    <string name="radio_q1_ans_wrong">America</string>
    <string name="radio_q1_ans_wrong2">India</string>

    // Second Question answers:
    <string name="et_q2_ans">2019</string>
    <string name="et_q2_ans_wrong">2018</string>
    <string name="et_q2_ans_wrong2">2020</string>

    // Third Question answers:
    <string name="checkbox_q3_ans">Fever or chills</string>
    <string name="checkbox_q3_ans2">Muscle or body aches</string>
    <string name="checkbox_q3_ans_wrong">Hair loss</string>

    // Fourth Question answers:
    <string name="radio_q4_ans">India</string>
    <string name="radio_q4_ans_wrong">China</string>
    <string name="radio_q4_ans_wrong2">America</string>

    // Fifth Question answers:
    <string name="radio_q5_ans">Elderly</string>
    <string name="radio_q5_ans_wrong">Youth</string>
    <string name="radio_q5_ans_wrong2">Children</string>

    <string name="two_answers_required">*Two answers required*</string>
    <string name="write_your_answer_here">Write your answer here</string>
    <string name="submit">Submit</string>
    <string name="your_result_is">, Your result is:</string>
    <string name="_5">/ 5</string>
    <string name="result">Result</string>
    <string name="out_of_5"> out of 5</string>
    <string name="welcome_to_quiz_app">Welcome to Quiz App!</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="covid_19_image">COVID-19 Image</string>
</resources>