<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity" >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/question_1"
                    android:textColor="@android:color/black"
                    android:textSize="27sp" />

                <RadioGroup
                    android:id="@+id/first_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/radio_q1_ans"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:fontFamily="sans-serif-light"
                        android:paddingStart="15dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/radio_q1_ans"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/radio_q1_ans_wrong"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:text="@string/radio_q1_ans_wrong"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/radio_q1_ans_wrong2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:text="@string/radio_q1_ans_wrong2"
                        android:textSize="20sp" />

                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/question_2"
                    android:textColor="@android:color/black"
                    android:textSize="27sp" />

                <EditText
                    android:id="@+id/et_q2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:hint="@string/write_your_answer_here"
                    android:inputType="number" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/two_answers_required"
                    android:textColor="#D50000"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/question_3"
                    android:textColor="@android:color/black"
                    android:textSize="27sp" />

                <CheckBox
                    android:id="@+id/checkbox_q3_ans"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/checkbox_q3_ans"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkbox_q3_ans2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/checkbox_q3_ans2"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkbox_q3_ans_wrong2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/checkbox_q3_ans_wrong"
                    android:textSize="20sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/question_4"
                    android:textColor="@android:color/black"
                    android:textSize="27sp" />

                <RadioGroup
                    android:id="@+id/second_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/radio_q4_ans"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:text="@string/radio_q4_ans"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/radio_q4_ans_wrong"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:text="@string/radio_q4_ans_wrong"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/radio_q4_ans_wrong2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:text="@string/radio_q4_ans_wrong2"
                        android:textSize="20sp" />

                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/question_5"
                    android:textColor="@android:color/black"
                    android:textSize="27sp" />

                <RadioGroup
                    android:id="@+id/third_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/radio_q5_ans"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:text="@string/radio_q5_ans"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/radio_q5_ans_wrong"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:text="@string/radio_q5_ans_wrong"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/radio_q5_ans_wrong2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:text="@string/radio_q5_ans_wrong2"
                        android:textSize="20sp" />

                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>